[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bande-mapping"
version = "0.1.0"
description = "Heuristic-agnostic geometric preprocessing for spatial optimization"
readme = "README.md"
authors = [
    { name = "Toprak Bandeoğlu", email = "toprak.bandeoglu@ozu.edu.tr" }
]
license = { text = "MIT" }
keywords = [
    "tsp",
    "traveling-salesman",
    "optimization",
    "heuristics",
    "operations-research",
    "preprocessing",
    "geometric"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/toprakbandeoglu/bande-mapping"
Repository = "https://github.com/toprakbandeoglu/bande-mapping"
Issues = "https://github.com/toprakbandeoglu/bande-mapping/issues"

[tool.setuptools.packages.find]
include = ["bande_mapping*"]
exclude = ["tests*", "examples*"]
